client 1st done

--- a/products/call-of-duty-black-ops-cold-war.html
+++ b/products/call-of-duty-black-ops-cold-war.html
@@ -116,7 +116,7 @@
 <div class="rounded-lg shadow-lg">
 <div class="overflow-hidden border rounded-md ring-1 ring-black ring-opacity-5 border-neutral-400">
 <div class="relative z-20 grid gap-6 px-5 py-6 bg-neutral-500 sm:gap-8 sm:p-8 lg:grid-cols-2">
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-ii-dmz" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -131,7 +131,7 @@ Our Premium Call of Duty: Modern Warfare II cheat is exactly what you ne...
 </div>
 </div>
 </a>
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-2019" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -146,7 +146,7 @@ Our Premium Call of Duty: Modern Warfare / Warzone cheat is exactly what...
 </div>
 </div>
 </a>
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-iii-warzone" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -161,7 +161,7 @@ Our Premium Call of Duty: Modern Warfare III cheat is exactly what you n...
 </div>
 </div>
 </a>
-<a href="https://interwebz-cheats.com/products/call-of-duty-black-ops-cold-war" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -176,7 +176,7 @@ Our Premium Call of Duty: Black Ops Cold War cheat is exactly what you n...
 </div>
 </div>
 </a>
-<a href="https://interwebz-cheats.com/products/privacy-tool" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -191,7 +191,7 @@ Our Premium Privacy Tool is exactly what you need if you are looking to...
 </div>
 </div>
 </a>
-<a href="https://interwebz-cheats.com/products/counter-strike-2" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+<a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
 <div class="flex-shrink-0 w-10 h-10">
 <img src="https://interwebz-cheats.com/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" class="w-10 h-10 rounded shadow" alt>
 </div>
@@ -688,17 +688,17 @@ Available Cheats
 </h4>
 <ul class="mt-4 space-y-4">
 <li>
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-ii-dmz" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Call of Duty: Modern Warfare II / DMZ
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-2019" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Call of Duty: Modern Warfare (2019)
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/products/call-of-duty-modern-warfare-iii-warzone" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Call of Duty: Modern Warfare III / Warzone
 </a>
 </li>
@@ -720,22 +720,22 @@ Community Forums
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/community/forums/media.8" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Cheat Media
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/community/forums/testimonials.6" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 User Reviews
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/community/forums/pre-sales-support.57" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Pre-sales Support
 </a>
 </li>
 <li>
-<a target="__blank" href="https://www.elitepvpers.com/forum/call-duty-trading/4955565-interwebz-mw-wz-cw-vg-aimbot-silent-aim-no-spread-unlocker-controller.html" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a target="__blank" href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Elitepvpers
 </a>
 </li>
@@ -747,22 +747,22 @@ Legal Information
 </h4>
 <ul class="mt-4 space-y-4">
 <li>
-<a href="https://interwebz-cheats.com/community/help/terms" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Terms of Service
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/community/help/privacy-policy" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Privacy Policy
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/media-resources" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Media Resources
 </a>
 </li>
 <li>
-<a href="https://interwebz-cheats.com/community/misc/contact" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
+<a href="" class="text-base leading-6 transition duration-150 ease-in-out text-neutral-200 hover:text-neutral-100">
 Contact Us
 </a>
 </li>
