--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           
             <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                 <div class="relative z-20 grid gap-6 px-5 py-6 bg-neutral-500 sm:gap-8 sm:p-8 lg:grid-cols-2">
-                    <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <a href="./products/call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                         <div class="flex-shrink-0 w-10 h-10">
                         <img src="./styles/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" class="w-10 h-10 rounded shadow" alt="">
                         </div>
@@ -128,7 +128,7 @@
                         </div>
                         </div>
                     </a>
-                    <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <a href="./products/call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                         <div class="flex-shrink-0 w-10 h-10">
                         <img src="./styles/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" class="w-10 h-10 rounded shadow" alt="">
                         </div>
@@ -143,7 +143,7 @@
                         </div>
                         </div>
                     </a>
-                    <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <a href="/products/call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
                         <div class="flex-shrink-0 w-10 h-10">
                         <img src="./styles/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" class="w-10 h-10 rounded shadow" alt="">
                         </div>
