client 1st done

--- a/products/call-of-duty-black-ops-cold-war.html
+++ b/products/call-of-duty-black-ops-cold-war.html
@@ -106,9 +106,9 @@
 </div>
 <div class="w-full">
 <div class="items-center hidden space-x-8 md:flex md:ml-10 md:pr-4">
-<div @click.away="productsMenuOpen = false" @keydown.escape="productsMenuOpen = false" x-data="{ productsMenuOpen: false }" class="relative z-50 inline-block -mr-4">
+<!-- <div @click.away="productsMenuOpen = false" @keydown.escape="productsMenuOpen = false" x-data="{ productsMenuOpen: false }" class="relative z-50 inline-block -mr-4">
 <button type="button" @click="productsMenuOpen = !productsMenuOpen" :class="{ 'text-neutral-100': productsMenuOpen, 'text-neutral-200': !productsMenuOpen }" class="inline-flex items-center space-x-2 text-base font-medium leading-6 transition duration-150 ease-in-out text-neutral-200 group hover:text-neutral-100 focus:outline-none focus:text-neutral-100">
-<span class="whitespace-nowrap">Our Cheats</span>
+<span class="whitespace-nowrap">Our Cheatssss</span>
 <svg class="w-5 h-5 transition duration-150 ease-in-out text-neutral-200 group-hover:text-neutral-100 group-focus:text-neutral-100" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
 </svg> </button>
@@ -219,7 +219,117 @@ View All Cheats
 </div>
 </div>
 </div>
-</div>
+</div> -->
+<div class="dropdown show">
+    <a class="dropdown-toggle whitespace-nowrap our-toggle" href="/products/products.html" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Our Cheats
+    </a>
+  
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+        <div class="relative z-20 grid gap-6 px-5 py-6 bg-neutral-500 sm:gap-8 sm:p-8 lg:grid-cols-2">
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                <div class="flex-shrink-0 w-10 h-10">
+                <img src="./styles/storage/699/f7b72121-a2ff-4416-ba28-34fe883a1a2b.png" class="w-10 h-10 rounded shadow" alt="">
+                </div>
+                <div class="space-y-1">
+                <div class="space-y-1">
+                <p class=" text-base font-medium leading-6 text-neutral-100">
+                Call of Duty: Modern Warfare II / DMZ
+                </p>
+                </div>
+                <div class=" text-sm leading-5 text-neutral-200">
+                Our Premium Call of Duty: Modern Warfare II cheat is exactly what you ne...
+                </div>
+                </div>
+            </a>
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                <div class="flex-shrink-0 w-10 h-10">
+                <img src="./styles/storage/514/ec487906-2e83-4cd4-b86b-cb39b28cceb2.png" class="w-10 h-10 rounded shadow" alt="">
+                </div>
+                <div class="space-y-1">
+                <div class="space-y-1">
+                <p class="text-base font-medium leading-6 text-neutral-100">
+                Call of Duty: Modern Warfare (2019)
+                </p>
+                </div>
+                <div class="text-sm leading-5 text-neutral-200">
+                Our Premium Call of Duty: Modern Warfare / Warzone cheat is exactly what...
+                </div>
+                </div>
+            </a>
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                <div class="flex-shrink-0 w-10 h-10">
+                <img src="./styles/storage/586/c518d00b-56dc-4f26-aee4-be0831ca3581.png" class="w-10 h-10 rounded shadow" alt="">
+                </div>
+                <div class="space-y-1">
+                <div class="space-y-1">
+                <p class="text-base font-medium leading-6 text-neutral-100">
+                Call of Duty: Modern Warfare III / Warzone
+                </p>
+                </div>
+                <div class="text-sm leading-5 text-neutral-200">
+                Our Premium Call of Duty: Modern Warfare III cheat is exactly what you n...
+                </div>
+                </div>
+            </a>
+            <a href="./call-of-duty-black-ops-cold-war.html" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <div class="flex-shrink-0 w-10 h-10">
+                    <img src="./styles/storage/430/229e4d2a-bb78-4d06-9c8d-5f7eec37e928.png" class="w-10 h-10 rounded shadow" alt="">
+                    </div>
+                    <div class="space-y-1">
+                    <div class="space-y-1">
+                    <p class="text-base font-medium leading-6 text-neutral-100">
+                    Call of Duty: Black Ops Cold War
+                    </p>
+                    </div>
+                    <div class="text-sm leading-5 text-neutral-200">
+                    Our Premium Call of Duty: Black Ops Cold War cheat is exactly what you n...
+                    </div>
+                    </div>
+                    </a>
+                    <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <div class="flex-shrink-0 w-10 h-10">
+                    <img src="./styles/storage/555/4d899979-49d1-47f4-91f3-78cd35040afb.png" class="w-10 h-10 rounded shadow" alt="">
+                    </div>
+                    <div class="space-y-1">
+                    <div class="space-y-1">
+                    <p class="text-base font-medium leading-6 text-neutral-100">
+                    Privacy Tool
+                    </p>
+                    </div>
+                    <div class="text-sm leading-5 text-neutral-200">
+                    Our Premium Privacy Tool is exactly what you need if you are looking to...
+                    </div>
+                    </div>
+            </a>
+            <a href="" class="flex items-start p-3 -m-3 space-x-4 transition duration-150 ease-in-out rounded-lg opacity-75 hover:bg-neutral-400 hover:opacity-100">
+                    <div class="flex-shrink-0 w-10 h-10">
+                    <img src="./styles/storage/537/f7a99a82-5861-4ea0-b0ba-a52f7bf05ef8.png" class="w-10 h-10 rounded shadow" alt="">
+                    </div>
+                    <div class="space-y-1">
+                    <div class="space-y-1">
+                    <p class="text-base font-medium leading-6 text-neutral-100">
+                    Counter-Strike 2
+                    </p>
+                    </div>
+                    <div class="text-sm leading-5 text-neutral-200">
+                    Our Premium Counter-Strike 2 cheat is exactly what you need if you are l...
+                    </div>
+                    </div>
+                    </a>
+                    </div>
+                    <div class="p-3 border-t bg-neutral-700 sm:p-8 border-neutral-400">
+                    <a href="./products.html" class="text-decoration-none flow-root p-3 px-4 py-3 -m-3 space-y-1 transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400">
+                    <div class="flex items-center justify-center space-x-3">
+                    <div class="text-base font-medium leading-6">
+                    View All Cheats
+                    </div>
+                    </div>
+            </a>
+        </div>
+    </div>
+  </div>
+
 <a href="../Forums/forums.html" class="font-medium transition duration-150 ease-in-out whitespace-nowrap text-neutral-200 hover:text-neutral-100">
 Community
 </a>
@@ -254,6 +364,7 @@ Logged in as name
 <a href="./products.html" class="block px-3 py-2 text-base font-medium transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400 focus:outline-none focus:text-neutral-100 focus:bg-neutral-400" role="menuitem">
 Our Cheats
 </a>
+
 <a href="../community/community.html" class="block px-3 py-2 mt-1 text-base font-medium transition duration-150 ease-in-out rounded-md text-neutral-200 hover:text-neutral-100 hover:bg-neutral-400 focus:outline-none focus:text-neutral-100 focus:bg-neutral-400" role="menuitem">
 Community
 </a>
