tickets page updated

--- a/Error/error.html
+++ b/Error/error.html
@@ -302,10 +302,10 @@
                 <div class="p-offCanvasAccountLink">
                     <div class="offCanvasMenu-linkHolder">
                         <a href="/community/account/" class="offCanvasMenu-link">
-<span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="toufiq">
+<span class="avatar avatar--xxs avatar--default avatar--default--image" data-user-id="93264" title="name">
 <span class="avatar-u93264-s"></span>
 </span>
-toufiq
+name
 </a>
                     </div>
                     <hr class="offCanvasMenu-separator" />
