--- a/Forums/forums.html
+++ b/Forums/forums.html
@@ -277,54 +277,7 @@
 
             <!-- // working on -->
         </nav>
-        <div class="p-sectionLinks d-none d-md-block">
-            <div class="p-sectionLinks-inner hScroller" data-xf-init="h-scroller">
-                <div class="hScroller-scroll">
-                    <ul class="p-sectionLinks-list">
-                        <li>
-                            <div class="p-navEl ">
-                                <a href="../dashboard/whats-new.html" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="newPosts">New posts</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="p-navEl " data-has-children="true">
-                                <a href="/community/find-threads/started" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="findThreads">Find threads</a>
-                                <a data-xf-key="alt+2" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
-                                <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
-                                    <div class="menu-content">
-                                        <a href="/community/find-threads/started" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-nav-id="yourThreads">Your threads</a>
-                                        <a href="/community/find-threads/contributed" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-nav-id="contributedThreads">Threads with your posts</a>
-                                        <a href="/community/find-threads/unanswered" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-nav-id="unansweredThreads">Unanswered threads</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="p-navEl " data-has-children="true">
-                                <a href="/community/watched/threads" class="p-navEl-link p-navEl-link--splitMenu " data-nav-id="watched">Watched</a>
-                                <a data-xf-key="alt+3" data-xf-click="menu" data-menu-pos-ref="< .p-navEl" class="p-navEl-splitTrigger" role="button" tabindex="0" aria-label="Toggle expanded" aria-expanded="false" aria-haspopup="true"></a>
-                                <div class="menu menu--structural" data-menu="menu" aria-hidden="true">
-                                    <div class="menu-content">
-                                        <a href="/community/watched/threads" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-nav-id="watchedThreads">Watched threads</a>
-                                        <a href="/community/watched/forums" class="menu-linkRow u-indentDepth0 js-offCanvasCopy " data-nav-id="watchedForums">Watched forums</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="p-navEl ">
-                                <a href="/community/search/?type=post" class="p-navEl-link " data-xf-key="alt+4" data-nav-id="searchForums">Search forums</a>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="p-navEl ">
-                                <a href="/community/forums/-/mark-read?date=1706274979" class="p-navEl-link " data-xf-click="overlay" data-xf-key="alt+5" data-nav-id="markForumsRead">Mark forums read</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+        
         <div class="offCanvasMenu offCanvasMenu--nav js-headerOffCanvasMenu" data-menu="menu" aria-hidden="true" data-ocm-builder="navigation">
             <div class="offCanvasMenu-backdrop" data-menu-close="true"></div>
             <div class="offCanvasMenu-content">
@@ -458,7 +411,7 @@ Post thread…
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/sales-threads.76/" data-xf-init data-shortcut="node-description">Sales Threads</a>
+                                                        <a class="text-color" href="" data-xf-init data-shortcut="node-description">Sales Threads</a>
                                                         
                                                     </h3>
                                                     <div class="node-description ">Not entirely convinced yet? Have a look here to see what we have to offer for each and every game.</div>
@@ -474,7 +427,7 @@ Post thread…
                                                         <span class="node-subNodesLabel">Sub-forums:</span>
                                                         <ol class="node-subNodeFlatList">
                                                             <li>
-                                                                <a href="/community/forums/members-only.97/" class="subNodeLink subNodeLink--forum node--id97 ">
+                                                                <a href="" class="subNodeLink subNodeLink--forum node--id97 ">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
 <i class="fa fas fa-user-lock  " style="color: #A08FBD; font-size: 15px;"></i>
 </span>
@@ -514,7 +467,7 @@ Members Only</a>
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/pre-sales-support.57/" data-xf-init data-shortcut="node-description">Pre-Sales Support</a>
+                                                        <a class="text-color" href="" data-xf-init data-shortcut="node-description">Pre-Sales Support</a>
                                                         <span class="node--newIndicator">New</span>
                                                     </h3>
                                                     <div class="node-description ">Have a question you want answered before you buy? This is the place to ask it!</div>
@@ -558,7 +511,7 @@ Members Only</a>
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/reviews.6/" data-xf-init data-shortcut="node-description">Reviews</a>
+                                                        <a class="text-color" href="" data-xf-init data-shortcut="node-description">Reviews</a>
                                                         <span class="node--newIndicator">New</span>
                                                     </h3>
                                                     <div class="node-description ">See what our customers have to say about us.</div>
@@ -602,7 +555,7 @@ Members Only</a>
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/media.8/" data-xf-init data-shortcut="node-description">Media</a>
+                                                        <a class="text-color" href="" data-xf-init data-shortcut="node-description">Media</a>
                                                         <span class="node--newIndicator">New</span>
                                                     </h3>
                                                     <div class="node-description ">Any form of media showcasing our cheats can be posted here!</div>
@@ -618,14 +571,14 @@ Members Only</a>
                                                         <span class="node-subNodesLabel">Sub-forums:</span>
                                                         <ol class="node-subNodeFlatList">
                                                             <li>
-                                                                <a href="/community/forums/creative-corner.11/" class="subNodeLink subNodeLink--forum node--id11 subNodeLink--unread">
+                                                                <a href="" class="subNodeLink subNodeLink--forum node--id11 subNodeLink--unread">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
 <i class="fa fas fa-palette  " style="color: #A08FBD;  font-size: 15px;"></i>
 </span>
 Creative Corner</a>
                                                             </li>
                                                             <li>
-                                                                <a href="/community/link-forums/media-resources.79/" class="subNodeLink subNodeLink--link node--id79">
+                                                                <a href="" class="subNodeLink subNodeLink--link node--id79">
 <span class="xfa-nit-node-icon-small" aria-hidden="true">
 <i class="fa fas fa-download  " style="color: #A08FBD; font-size: 15px;"></i>
 </span>
@@ -665,7 +618,7 @@ Media Resources</a>
 </span>
                                                 <div class="node-main js-nodeMain">
                                                     <h3 class="node-title">
-                                                        <a class="text-color" href="/community/forums/reseller.63/" data-xf-init data-shortcut="node-description">Reseller</a>
+                                                        <a class="text-color" href="" data-xf-init data-shortcut="node-description">Reseller</a>
                                                         <span class="node--newIndicator">New</span>
                                                     </h3>
                                                     <div class="node-description ">Do we not support your preferred payment method? Our trusted resellers are here to help you out.</div>
@@ -1238,10 +1191,10 @@ Media Resources</a>
                 <div class="p-footer-row">
                     <div class="p-footer-row-main">
                         <ul class="p-footer-linkList">
-                            <li><a href="/community/misc/contact" data-xf-click="overlay">Contact us</a></li>
-                            <li><a href="/community/help/terms/">Terms and rules</a></li>
-                            <li><a href="/community/help/privacy-policy/">Privacy policy</a></li>
-                            <li><a href="/community/help/">Help</a></li>
+                            <li><a href="" data-xf-click="overlay">Contact us</a></li>
+                            <li><a href="">Terms and rules</a></li>
+                            <li><a href="">Privacy policy</a></li>
+                            <li><a href="">Help</a></li>
                         </ul>
                     </div>
                     <div class="p-footer-row-opposite">
