--- a/community/account/account-details.html
+++ b/community/account/account-details.html
@@ -257,7 +257,7 @@
                     <ul class="p-sectionLinks-list">
                         <li>
                             <div class="p-navEl ">
-                                <a href="/community/whats-new/news-feed" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="defaultNewsFeed">Your news feed</a>
+                                <a href="/community/news-feed.html" class="p-navEl-link " data-xf-key="alt+1" data-nav-id="defaultNewsFeed">Your news feed</a>
                             </div>
                         </li>
                         <li>
@@ -354,14 +354,14 @@ Your account
                                         <div class="block-container">
                                             <h3 class="block-header">Your account</h3>
                                             <div class="block-body" style="background: #483663;">
-                                                <a class="blockLink" href="/community/members/toufiq.93264/">Your profile</a>
-                                                <a class="blockLink " href="/community/account/alerts">
+                                                <a class="blockLink" href="/Profile/profile.html">Your profile</a>
+                                                <a class="blockLink " href="/Error/error.html">
 Alerts
 </a>
-                                                <a class="blockLink " href="/community/account/reactions">
+                                                <a class="blockLink " href="/Error/error.html">
 Reactions received
 </a>
-                                                <a class="blockLink " href="/community/account/bookmarks">
+                                                <a class="blockLink " href="/Error/error.html">
 Bookmarks
 </a>
                                             </div>
@@ -373,19 +373,19 @@ Account details
                                                 <a class="blockLink " href="/community/account/security.html">
 Password and security
 </a>
-                                                <a class="blockLink " href="/community/account/privacy">
+                                                <a class="blockLink " href="/Error/error.html">
 Privacy
 </a>
-                                                <a class="blockLink " href="/community/account/preferences">
+                                                <a class="blockLink " href="/Error/error.html">
 Preferences
 </a>
-                                                <a class="blockLink " href="/community/account/signature">
+                                                <a class="blockLink " href="/Error/error.html">
 Signature
 </a>
-                                                <a class="blockLink " href="/community/account/following">
+                                                <a class="blockLink " href="/Error/error.html">
 Following
 </a>
-                                                <a class="blockLink " href="/community/account/ignored">
+                                                <a class="blockLink " href="/Error/error.html">
 Ignoring
 </a>
                                             </div>
