--- a/Tickets/tickets.html
+++ b/Tickets/tickets.html
@@ -41,6 +41,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
 
 <body data-template="nf_tickets_member_view">
@@ -316,7 +317,7 @@
                                                 <div class="block-container">
                                                     <div class="block-body" style="border-bottom: 1px solid #756293;">
                                                         
-                                                        <div class="formInfoRow formInfoRow--confirm">
+                                                        <div class="formInfoRow formInfoRow--confirm" style="color: #907bb1;">
                                                             Are you sure you want to mark all tickets read?
                                                         </div>
                                                     
