2nd issues solve

--- a/Forums/Announcement/Single/single.html
+++ b/Forums/Announcement/Single/single.html
@@ -287,7 +287,7 @@ We decided to make the celebration extra special this..." />
                 </div>
             </div>
         </nav>
-        <div class="p-sectionLinks">
+        <!-- <div class="p-sectionLinks">
             <div class="p-sectionLinks-inner hScroller" data-xf-init="h-scroller">
                 <div class="hScroller-scroll">
                     <ul class="p-sectionLinks-list">
@@ -334,7 +334,7 @@ We decided to make the celebration extra special this..." />
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="offCanvasMenu offCanvasMenu--nav js-headerOffCanvasMenu" data-menu="menu" aria-hidden="true" data-ocm-builder="navigation">
             <div class="offCanvasMenu-backdrop" data-menu-close="true"></div>
             <div class="offCanvasMenu-content">
