--- a/Forums/Announcement/announcement.html
+++ b/Forums/Announcement/announcement.html
@@ -267,7 +267,7 @@
         </div>
     </div>
 </nav>
-<div class="p-sectionLinks d-none d-md-block">
+<!-- <div class="p-sectionLinks d-none d-md-block">
     <div class="p-sectionLinks-inner hScroller" data-xf-init="h-scroller">
         <div class="hScroller-scroll">
             <ul class="p-sectionLinks-list">
@@ -314,7 +314,7 @@
             </ul>
         </div>
     </div>
-</div>
+</div> -->
 <div class="offCanvasMenu offCanvasMenu--nav js-headerOffCanvasMenu" data-menu="menu" aria-hidden="true" data-ocm-builder="navigation">
 <div class="offCanvasMenu-backdrop" data-menu-close="true"></div>
 <div class="offCanvasMenu-content">
